--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,52 @@
+/* reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
   }
+  img {
+    max-width: 100%;
+  }
+  /* utility */
+  .flex{
+    display: flex;
+  }
+  .wrap{
+    flex-wrap: wrap;
+  }
+  /* schermata principale */
+  main{
+    padding:35px;
+    width: 100%;
+    max-width: 1520px;
+    height: 90vh;
+    background-color: black;
+
+  }
+  /* partecipanti */
+  .partecipanti{
+
+  }
+
+.partecipante{
+    width: calc(100% / 7);
+    padding: 2px;
+    position: relative;
+}
+/* barra degli strumenti */
+.strumenti{
+    width: 100%;
+    height: 10vh;
+    background-color: #222222;
+  
+}
+.no-audio{
+    display: inline-block;
+    color: white;
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    background-color: rgba(0,0,0, 0.6);
+}
