--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,26 @@
     background-color: black;
 
   }
+  .icone-speaker{
+    color: white;
+    font-size: 0.8rem;
+    position: absolute;
+    top:2px;
+    right: 75px;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  .icone-ridimensiona{
+    color: white;
+    font-size: 0.8rem;
+    position: absolute;
+    top:2px;
+    right: 50px;
+    border-radius: 5px;
+    padding: 2px;
+    background-color: rgba(255, 255, 255, 0.5);
+  }
   /* partecipanti */
   .partecipanti{
 
@@ -42,11 +62,11 @@
   
 }
 .no-audio{
-    display: inline-block;
     color: white;
     font-size: 0.8rem;
     position: absolute;
     bottom: 5px;
     left: 5px;
+    padding:1px;
     background-color: rgba(0,0,0, 0.6);
 }
