--- a/css/style.css
+++ b/css/style.css
@@ -4,69 +4,115 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-  }
-  img {
+}
+
+img {
     max-width: 100%;
-  }
-  /* utility */
-  .flex{
+}
+
+/* utility */
+.flex {
     display: flex;
-  }
-  .wrap{
+}
+
+.wrap {
     flex-wrap: wrap;
-  }
-  /* schermata principale */
-  main{
-    padding:35px;
+}
+.nowrap {
+    flex-wrap: nowrap;
+}
+
+/* schermata principale */
+main {
+    padding: 35px;
     width: 100%;
     max-width: 1520px;
     height: 90vh;
     background-color: black;
 
-  }
-  .icone-speaker{
+}
+
+.icone-speaker {
     color: white;
     font-size: 0.8rem;
     position: absolute;
-    top:2px;
+    top: 2px;
     right: 75px;
     border-radius: 5px;
     padding: 2px;
     background-color: rgba(255, 255, 255, 0.5);
-  }
-  .icone-ridimensiona{
+}
+
+.icone-ridimensiona {
     color: white;
     font-size: 0.8rem;
     position: absolute;
-    top:2px;
+    top: 2px;
     right: 50px;
     border-radius: 5px;
     padding: 2px;
     background-color: rgba(255, 255, 255, 0.5);
-  }
-  /* partecipanti */
-  .partecipanti{
+}
 
-  }
+/* partecipanti */
+.partecipanti {}
 
-.partecipante{
+.partecipante {
     width: calc(100% / 7);
     padding: 2px;
     position: relative;
 }
-/* barra degli strumenti */
-.strumenti{
-    width: 100%;
-    height: 10vh;
-    background-color: #222222;
-  
-}
-.no-audio{
+.no-audio {
     color: white;
     font-size: 0.8rem;
     position: absolute;
     bottom: 5px;
     left: 5px;
-    padding:1px;
-    background-color: rgba(0,0,0, 0.6);
+    padding: 1px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* barra degli strumenti */
+.strumenti {
+    width: 100%;
+    height: 10vh;
+    background-color: #222222;
+    color: white;
+
+}
+.up{
+    font-size: 1.4rem;
+    padding: 14px;
+
+}
+.down{
+    padding-top: 1rem;
+    padding-right: 5px;
+    font-size: 0.5rem;;
+}
+.contenitore-strumenti{
+    width: calc(100% / 3);
+    padding: 5px;
+text-align: center;
+font-size: 0.8rem;
+}
+li {
+    float: left;
+    list-style-position: initial;
+}
+ul li {
+    margin: 3px;
+  }
+  .uscita{
+    color: red;
+    border: solid 1px red;
+    background-color: rgba(64, 62, 62, 0.999);
+    width:70px;
+    margin-right: 50px;
+  }
+.just{
+    justify-content: space-between;
+}
+.flexg{
+    flex-grow: 2;
 }
