--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,12 @@ ul li {
 .flexg{
     flex-grow: 2;
 }
+
+/* tecnica wrapper */
+.wrapper{
+    width: 100%;
+    height: 100vh;
+}
+.green{
+    color: green;
+}
