--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ img {
 .wrap {
     flex-wrap: wrap;
 }
+
 .nowrap {
     flex-wrap: nowrap;
 }
@@ -62,6 +63,7 @@ main {
     padding: 2px;
     position: relative;
 }
+
 .no-audio {
     color: white;
     font-size: 0.8rem;
@@ -80,48 +82,58 @@ main {
     color: white;
 
 }
-.up{
+
+.up {
     font-size: 1.4rem;
     padding: 14px;
 
 }
-.down{
+
+.down {
     padding-top: 1rem;
     padding-right: 5px;
-    font-size: 0.5rem;;
+    font-size: 0.5rem;
+    ;
 }
-.contenitore-strumenti{
+
+.contenitore-strumenti {
     width: calc(100% / 3);
     padding: 5px;
-text-align: center;
-font-size: 0.8rem;
+    text-align: center;
+    font-size: 0.8rem;
 }
+
 li {
     float: left;
     list-style-position: initial;
 }
+
 ul li {
     margin: 3px;
-  }
-  .uscita{
+}
+
+.uscita {
     color: red;
     border: solid 1px red;
     background-color: rgba(64, 62, 62, 0.999);
-    width:70px;
+    width: 70px;
     margin-right: 50px;
-  }
-.just{
+}
+
+.just {
     justify-content: space-between;
 }
-.flexg{
+
+.flexg {
     flex-grow: 2;
 }
 
 /* tecnica wrapper */
-.wrapper{
+.wrapper {
     width: 100%;
     height: 100vh;
 }
-.green{
+
+.green {
     color: green;
 }
